# hse_mtc_hack

./: .gitignore  README.md  docker-compose.yml
api/: pyproject.toml
api/app/core/: database.py
api/app/endpoints/: posts.py
backend/: Dockerfile  pyproject.toml
backend/app/: .env  .env.example  app.py  config.py  entrypoints.py
backend/app/core/: crud.py  database.py  schemas.py  settings.py
backend/app/endpoints/: api.py  channels.py  comparing.py  dashboard.py  metrics.py  posts.py
backend/app/models/: db_models.py
backend/app/schemas/: request_schemas.py  response_schemas.py
backend/app/utils/: tg.py
backend/kube/: deployment.yml  ingress.yml
coordinator/docker/: Dockerfile
coordinator/src/: api.py  config.py  requirements.txt
helm/: README.md
helm/telewatcher/: Chart.yaml  values.yaml
kube-common/: cert-prod.yml  common-cfgmap.yml  namespace.yml
microservices/api/app/: __main__.py
microservices/api/kube/: deployment.yml  ingress.yml  svc.yml
microservices/coordinator/deploy/: docker-compose.yml
microservices/coordinator/kube/: deployment.yml  ingress.yml  svc.yml
microservices/coordinator/src/: config.py
microservices/worker/deploy/: docker-compose.yml
microservices/worker/docker/: Dockerfile
microservices/worker/kube/: deployment.yml
microservices/worker/src/: config.py  db.py
worker/deploy/: docker-compose.yml
worker/docker/: Dockerfile
worker/kube/: svc.yml
worker/src/: api.py  config.py  db.py  requirements.txt  worker.py
worker/src/env/: pyvenv.cfg
worker/src/models/: db_models.py
(+19 files in other folders)
